--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.thymeleaf.encoding=UTF-8
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/TROCENCHERES_DB
 spring.datasource.username=Trocencheres_user
 spring.datasource.password=Pa$$w0rd
